--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -64,7 +64,7 @@
     <div class="contact_section layout_padding">
       <div class="container-fluid">
         <h1 class="what_taital">Contact us</h1>
-        <p class="amet_text">We are working 24*7 to deliver you the world's best services, Please reach out us using below form.</p>
+        <p class="amet_text">We are working 24*7 to deliver you the world's best services, Please reach out us using below form. We are happy to help.</p>
         <div class="contact_section2">
           <div class="row">
             <div class="col-md-6 padding_left_0">
